[package]
name = "tokio_tcp_proxy"
version = "0.1.0"
authors = ["Oguz Bilgener <oguz@bilgener.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1", features=["full"]}
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"

[profile.release]
lto = true
panic = "abort"